Dashboard page - fixed overflow hidden

--- a/app/client/stylesheets/assets/css/custom.css
+++ b/app/client/stylesheets/assets/css/custom.css
@@ -2,7 +2,7 @@
 .page-content {
     background: #000000;
     height: 100%;
-    overflow-y: hidden;
+    /*overflow-y: hidden;*/
 }
 .navbar .logo-box {
     background: rgb(251, 251, 251);
